Bug 55623 - FILESAVE: xlsx column widths exported incorrectly
Summary: FILESAVE: xlsx column widths exported incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.2.1 rc
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard: target:3.6.3 target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-04 13:14 UTC by Noel Power
Modified: 2013-02-05 12:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test file (8.30 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2012-10-04 13:16 UTC, Noel Power
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-10-04 13:14:44 UTC
column widths are exported incorrectly. Any document saved to xlsx ( that has some manually set column widths ) when reloaded into calc show the column size smaller.
Comment 1 Noel Power 2012-10-04 13:16:52 UTC
Created attachment 68081 [details]
test file

to reproduce

* 3.5/3.6/3.7 import of miscColWidths.xlsx

col c 22.84mm
col g 44.04mm
col k 18.61mm

* 3.5/3.6/3.7 reloaded export of miscColWidths.xlsx

col c 20.43mm
col g 39.37mm
col k 16.63mm
Comment 2 Noel Power 2012-10-04 13:17:14 UTC
taking this
Comment 3 Noel Power 2012-10-04 14:51:10 UTC
actually not only are the columns exported incorrectly most of the problem is that they are imported incorrectly also
Comment 4 Not Assigned 2012-10-04 15:49:13 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f08e1ac6c0998e36359cc08e590ee6e8dfab3599&g=libreoffice-3-6

xlsx fix import/export of column widths fdo#55623


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-10-04 15:49:31 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8e55d021ff3100818f6160cfb6dd2685eb08c26&g=libreoffice-3-6

Revert "xlsx fix import/export of column widths fdo#55623" wrong branch


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Not Assigned 2012-10-04 16:01:03 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e753f8446554822d97969b0c18eba6cb9d79e26

xlsx fix import/export of column widths fdo#55623



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Not Assigned 2012-10-09 03:54:21 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a00d5c5321959c316f6103e18dddef1ad5f02376&g=libreoffice-3-6

xlsx fix import/export of column widths fdo#55623


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Noel Power 2013-02-05 12:45:45 UTC
fixed