xlsx fix import/export of column widths fdo#55623

column widths were never imported or exported correctly in xlsx.

Change-Id: I92d469ce52495fe77281cb22341e9c5127e6b506